test/tests/operators/to_google_secops/empty_labels.txt
error: `labels` must not be empty
 --> tests/operators/to_google_secops/empty_labels.tql:9:47
  |
9 |   collection_time=2026-01-01T00:00:01, labels={}
  |                                               ^^ 
  |
